# gradio-ai-agent

./: .env.example  .gitignore  ENVIRONMENT.md  README.md  pyproject.toml  requirements.txt
data/: sample.txt
gradio_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: agent_gradio.py
